--- a/hw1-HashTable/hashtable-implementation/pom.xml
+++ b/hw1-HashTable/hashtable-implementation/pom.xml
@@ -5,15 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>hashtable</artifactId>
+    <artifactId>hashtable-implementation</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <name>Aggregate pom</name>
-
-    <modules>
-        <module>hashtable-implementation</module>
-        <module>hashtable-tests</module>
-    </modules>
-
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 </project>
