--- a/trie/build.gradle
+++ b/trie/build.gradle
@@ -5,7 +5,7 @@ plugins {
 group 'com.example'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
     mavenCentral()
@@ -13,5 +13,10 @@ repositories {
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0-M1'
-//    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.0-M1'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.0-M1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.4.0-M1'
+}
+
+test {
+    useJUnitPlatform()
 }
