--- a/MyTrieSet/build.gradle
+++ b/MyTrieSet/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0-M1'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.0-M1'
     testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.4.0-M1'
+
+    // https://mvnrepository.com/artifact/org.jetbrains/annotations
+    compile group: 'org.jetbrains', name: 'annotations', version: '17.0.0'
 }
 
 test {
