Attempt to devide travis jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: java
+jdk:
+ - openjdk11
 os:
  - linux
 env:
- - PROJECT_DIR=hw1-HashTable
  - PROJECT_DIR=trie
  - PROJECT_DIR=MyTreeSet
  - PROJECT_DIR=SmartList
 script: cd $PROJECT_DIR && ./gradlew check
+env:
+ - PROJECT_DIR=hw1-HashTable
+script: cd $PROJECT_DIR && mvn test
