--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ os:
 env:
  - PROJECT_DIR=hw1-HashTable
  - PROJECT_DIR=trie
-# - PROJECT_DIR=MyTreeSet
+ - PROJECT_DIR=MyTreeSet
 # - PROJECT_DIR=SmartList
 script: cd $PROJECT_DIR && if [[ -f gradlew ]] ; then ./gradlew check; else mvn test; fi;
 
