--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ env:
  - PROJECT_DIR=trie
  - PROJECT_DIR=MyTreeSet
  - PROJECT_DIR=SmartList
+ - PROJECT_DIR=Reflector
 script: cd $PROJECT_DIR && if [[ -f gradlew ]] ; then ./gradlew check; else mvn test; fi;
 
