--- a/QSort/build.gradle
+++ b/QSort/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0-M1'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.0-M1'
     testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.4.0-M1'
-    compile group: 'org.jetbrains', name: 'annotations', version: '17.0.0'gi
+    compile group: 'org.jetbrains', name: 'annotations', version: '17.0.0'
 }
 
 test {
