--- a/Threadpool/build.gradle
+++ b/Threadpool/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0-M1'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.0-M1'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.4.0-M1'
     testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.4.0-M1'
 
     // https://mvnrepository.com/artifact/org.jetbrains/annotations
@@ -25,6 +26,7 @@ dependencies {
 test {
     useJUnitPlatform()
     testLogging {
-        events 'PASSED', 'FAILED', 'SKIPPED'
+//        events 'PASSED', 'FAILED', 'SKIPPED'
+        events 'FAILED', 'SKIPPED'
     }
 }
