--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ env:
  - PROJECT_DIR=SmartList
  - PROJECT_DIR=Phonebook
  - PROJECT_DIR=QSort
+ - PROJECT_DIR=Threadpool
 script: cd $PROJECT_DIR && if [[ -f gradlew ]] ; then ./gradlew check; else mvn test; fi;
 
