all the docs & weapon selection & some features

--- a/Cannon/build.gradle
+++ b/Cannon/build.gradle
@@ -18,7 +18,7 @@ javafx {
     modules = [ 'javafx.controls' ]
 }
 
-mainClassName = 'com.example.cannon.Main'
+mainClassName = 'com.example.cannon.application.Main'
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0-M1'
